{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 10,
  "lineage": "bdcd3147-3bea-98bb-161f-ade64685e0ca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "javaserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cda377a1b884a1bc",
            "arn": "arn:aws:ec2:ap-south-1:348144482673:instance/i-0e3899b1c7140cec8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e3899b1c7140cec8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "javaserver_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04c4b65f41ba58489",
            "private_dns": "ip-10-0-1-142.ap-south-1.compute.internal",
            "private_ip": "10.0.1.142",
            "public_ip": "13.232.183.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d6538a8aba2ae4c0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-076fa0456218ccabc",
            "tags": {
              "Name": "javaserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06b80459001145040"
            ]
          },
          "dependencies": [
            "aws_key_pair.javaserver_key_pair",
            "aws_security_group.javaserver_sg",
            "aws_subnet.javaserver_public_subnet",
            "aws_vpc.javaserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "javaserver_inet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:348144482673:internet-gateway/igw-073b82d99048a8ec6",
            "id": "igw-073b82d99048a8ec6",
            "owner_id": "348144482673",
            "tags": {
              "Name": "javaserver_inet_gateway"
            },
            "vpc_id": "vpc-0a8867c08bef6c3d9"
          },
          "dependencies": [
            "aws_vpc.javaserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "javaserver_inet_gateway_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-019622727863ef4d1",
            "owner_id": "348144482673",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-073b82d99048a8ec6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "javaserver_inet_gateway_routetable"
            },
            "vpc_id": "vpc-0a8867c08bef6c3d9"
          },
          "dependencies": [
            "aws_internet_gateway.javaserver_inet_gateway",
            "aws_vpc.javaserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "javaserver_inet_gateway_routetable_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0077032b3d0f36bcc",
            "route_table_id": "rtb-019622727863ef4d1",
            "subnet_id": "subnet-076fa0456218ccabc"
          },
          "dependencies": [
            "aws_internet_gateway.javaserver_inet_gateway",
            "aws_route_table.javaserver_inet_gateway_routetable",
            "aws_subnet.javaserver_public_subnet",
            "aws_vpc.javaserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "javaserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:348144482673:security-group/sg-06b80459001145040",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b80459001145040",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20201113103319293200000001",
            "name_prefix": "",
            "owner_id": "348144482673",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "javaserver_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8867c08bef6c3d9"
          },
          "dependencies": [
            "aws_vpc.javaserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "javaserver_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:348144482673:subnet/subnet-01927476797fb6ab4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-01927476797fb6ab4",
            "map_public_ip_on_launch": false,
            "owner_id": "348144482673",
            "tags": {
              "Name": "javaserver_private_subnet"
            },
            "vpc_id": "vpc-0a8867c08bef6c3d9"
          },
          "dependencies": [
            "aws_vpc.javaserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "javaserver_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:348144482673:subnet/subnet-076fa0456218ccabc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-076fa0456218ccabc",
            "map_public_ip_on_launch": true,
            "owner_id": "348144482673",
            "tags": {
              "Name": "javaserver_public_subnet"
            },
            "vpc_id": "vpc-0a8867c08bef6c3d9"
          },
          "dependencies": [
            "aws_vpc.javaserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "javaserver_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:348144482673:vpc/vpc-0a8867c08bef6c3d9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0112a982a8b9953ea",
            "default_route_table_id": "rtb-0cfb8e79ffee5bf87",
            "default_security_group_id": "sg-050609b51466a1bd1",
            "dhcp_options_id": "dopt-05c8066e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a8867c08bef6c3d9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cfb8e79ffee5bf87",
            "owner_id": "348144482673",
            "tags": {
              "Name": "javaserver_vpc"
            }
          }
        }
      ]
    }
  ]
}